Update files-to-change section to reflect Javalin migration scope
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>